[tool.poetry]
name = "yamlpath"
version = "0.1.0"
description = "Find the YAML path to a given position in a document"
authors = ["Keith Hall <kingkeith+git@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
"ruamel.yaml" = "^0.18.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
